+ plot_seascape_ts()

--- a/README.Rmd
+++ b/README.Rmd
@@ -1,6 +1,8 @@
 ---
 title: ""
 output: github_document
+editor_options: 
+  chunk_output_type: console
 ---
 
 <!-- README.md is generated from README.Rmd. Please edit that file -->
@@ -9,7 +11,8 @@ output: github_document
 knitr::opts_chunk$set(
   echo = T, warning = F,
   fig.path = "man/figures/")
-# devtools::load_all(force = T)
+# devtools::load_all()
+# devtools::install_local(force = T)
 ```
 
 <!-- README.md is generated from README.Rmd. Please edit that file -->
@@ -45,15 +48,27 @@ remotes::install_github("marinebon/seascapeR")
 
 ## Use
 
+Load the library and map Seascape classes using a web map server (wms) that loads image tiles (not data) interactively (zoom, pan) from R.
+
 ```{r README-map_seascape_wms}
 library(seascapeR)
 
 map_seascape_wms("2020-11-15", ctr_lon = -81.3, ctr_lat = 24.5, ctr_dd = 10)
 ```
 
-Note that when you run the code above in [RStudio](https://rstudio.com/products/rstudio/download/), knit from within [Rmarkdown](https://rmarkdown.rstudio.com/) to html, or use in a [Shiny](https://shiny.rstudio.com/) app, an interactive map displays allowing you to zoom and pan.
+Get Seascape data for a year and plot Seascape classes over time.
 
-For more on how to use the `seascapeR` functions, see the [Getting Started](articles/seascapeR.html) article.
+```{r README-plot_seascape_ts}
+r_mo_2019 <- get_seascape_data(
+  ctr_lon = -81.3, ctr_lat = 24.5, ctr_dd = 10, 
+  dataset = "global_monthly", var = "CLASS", 
+  date_beg = "2019-01-01", date_end = "2020-01-01")
 
+plot_seascape_ts(r_mo_2019, show_legend = "always")
+```
+
+Note that when you run the code above in [RStudio](https://rstudio.com/products/rstudio/download/), knit from within [Rmarkdown](https://rmarkdown.rstudio.com/) to html, or use in a [Shiny](https://shiny.rstudio.com/) app, an interactive map displays allowing you to zoom and pan and the time series can zoom in time and hover over values.
+
+For more on how to use the `seascapeR` functions and view out these interactive visualizations, see the [Getting Started](articles/seascapeR.html) article.
 
 For more on how to contribute to `seascapeR` package development, see [CONTRIBUTE.md]( https://github.com/marinebon/seascapeR/blob/main/CONTRIBUTE.md).
