--- a/README.Rmd
+++ b/README.Rmd
@@ -6,6 +6,7 @@ editor_options:
 ---
 
 <!-- README.md is generated from README.Rmd. Please edit that file -->
+<!-- DELETE data_ss/ before running -->
 
 ```{r, include = FALSE}
 #' TODO: unit tests with workflows
