--- a/README.Rmd
+++ b/README.Rmd
@@ -63,9 +63,9 @@ date_end    = "2021-01-01"
 dir_data = here::here("data_ss")
 dir_ply  = glue::glue("{dir_data}/ply")
 dir_grd  = glue::glue(
-  "{dir_data}/{sanctuary}_{ss_dataset}_{date_beg}_to_{date_end}")
+  "{dir_data}/{sanctuary}_{ss_dataset}")
 ts_csv   = glue::glue(
-  "{dir_data}/{sanctuary}_{ss_dataset}_{date_beg}_to_{date_end}_{ss_var}.csv")
+  "{dir_data}/{sanctuary}_{ss_dataset}_{ss_var}.csv")
 
 # get sanctuary polygon
 ply <- get_url_ply(
