∆ `map_ss_wms()` erddap tile, `map_ss_grd()` esri ocean basemap

--- a/README.Rmd
+++ b/README.Rmd
@@ -105,7 +105,9 @@ ss_info
 
 # map SeaScape using web map server (wms) image tiles
 map_ss_wms(ss_info, ply, ss_var = ss_var)
+```
 
+```{r}
 # get SeaScape grids within polyon for date range 
 grds <- get_ss_grds(
   ss_info, ply, 
@@ -145,7 +147,7 @@ For more on how to use the `seascapeR` functions and view these interactive visu
 Data files were cached by setting path variables and feeding as arguments to functions in the following order:
 
 1. `get_url_ply()`: Based on `dir_ply`, save \*.zip, unzip and shapefile with file components \*.shp, etc, readable by any GIS program. 
-1. `get_ss_grds()`: Based on `dir_grd`, save grids (aka rasters) as GeoTIFs (*.tif) with filenames of form "grd\_\[ss\_var\]\_\[date\].tif", readable by any GIS program.
+1. `get_ss_grds()`: Based on `dir_grd`, save grids (aka rasters) as GeoTIFs (*.tif) with filenames of form "grd_[ss_var]_[date].tif", readable by any GIS program.
 1. `plot_ss_ts()`: Based on `ts_csv`, save the table as a comma-seperated value (*.csv) file, readable by any spreadsheet program.
 
 ```{r}
